# markdown-to-qti

./: .gitignore  README.md  pyproject.toml
examples/: cs101_final_exam_v2.md  sample_quiz.md
src/markdown_to_qti/: __init__.py  cli.py  parser.py  qti_generator.py
src/markdown_to_qti.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_cli.py  test_parser.py  test_qti_generator.py
